[project]
name = "gh-issue-validator"
version = "0.1.0"
description = "Validate (lint) GitHub issues."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "mistletoe",
  "nltk",
  "pydantic-settings",
  "pygithub",
]

[project.scripts]
gh-issue-validator = "gh_issue_validator.cli:cli"

[dependency-groups]
dev = [
  "pytest",
  "mypy>=1.19.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_issue_validator"]


[tool.mypy]
packages = ["gh_issue_validator", "tests"]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
  "nltk",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Require trailing commas (formatter handles it)
  "D104",    # Require docstring in public package
  "D105",    # Require docstring in magic method
  "D203",    # Require blank line before class docstring
  "D213",    # Require multi-line docstrings to start on the line after opening triple-quotes
  "FIX002",  # Forbid TODOs
  "TD002",   # Require author in TODOs
  "TD003",   # Require issue link in TODOs
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D101",    # Require docstring for class
  "FBT001",  # Forbid boolean positional arguments
  "S101",    # Forbid assertion statements
  "SLF001",  # Forbid private member access
]
