[project]
name = "gh-issue-validator"
description = "Validate (lint) GitHub issues."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  "mistletoe",
  "nltk",
  "pydantic-settings",
  "pygithub",
]

[project.scripts]
gh-issue-validator = "gh_issue_validator.cli:cli"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest",
  "pytest-cov",
]
docs = [
  "myst-parser>=5.0.0",
  "pydata-sphinx-theme==0.16.0",  # See: https://github.com/pydata/pydata-sphinx-theme/issues/2090
  "sphinx>=9.1.0",
  "sphinx-autodoc-typehints",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gh_issue_validator/_version.py"


[tool.hatch.build.targets.wheel]
packages = ["src/gh_issue_validator"]


[tool.mypy]
packages = ["gh_issue_validator", "tests"]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
  "nltk",
]
ignore_missing_imports = true


[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Require trailing commas (formatter handles it)
  "D104",    # Require docstring in public package
  "D105",    # Require docstring in magic method
  "D107",    # Require docstring in __init__
  "D203",    # Require blank line before class docstring
  "D213",    # Require multi-line docstrings to start on the line after opening triple-quotes
  "FIX002",  # Forbid TODOs
  "T201",    # Forbid print
  "TD002",   # Require author in TODOs
  "TD003",   # Require issue link in TODOs
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D101",     # Require docstring for class
  "E501",     # Require line length <=88 chars
  "FBT001",   # Forbid boolean positional arguments
  "PLR2004",  # Forbid magic values
  "S101",     # Forbid assertion statements
  "SLF001",   # Forbid private member access
]
".github/issue_validator.py" = [
  "INP001",  # Require __init__.py
]


[tool.pytest]
strict_markers = true
markers = [
  "public_api_test: validate that the public API hasn't changed unintentionally",
]
